--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,20 @@
   <properties>
     <!-- Plugin versions -->
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
+    <dependency-check-maven.version>8.2.1</dependency-check-maven.version>
     <lombok.version>1.18.28</lombok.version>
+    <formatter-maven-plugin.version>2.23.0</formatter-maven-plugin.version>
     <surefire-plugin.version>3.0.0</surefire-plugin.version>
 
     <!-- Project setup -->
     <maven.compiler.release>17</maven.compiler.release>
+    <dependency-check-maven.skip>true</dependency-check-maven.skip>
+    <dependency-check-maven.formats>html,junit</dependency-check-maven.formats>
+    <formatter-maven-plugin.goal>format</formatter-maven-plugin.goal>
+    <formatter-maven-plugin.skip>false</formatter-maven-plugin.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <skipITs>true</skipITs>
+    <skipITs>false</skipITs>
 
     <!-- Quarkus setup -->
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
@@ -28,6 +34,24 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>${formatter-maven-plugin.version}</version>
+        <configuration>
+          <configFile>google-style.xml</configFile>
+          <lineEnding>LF</lineEnding>
+          <skip>${formatter-maven-plugin.skip}</skip>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>${formatter-maven-plugin.goal}</goal>
+            </goals>
+            <phase>validate</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
@@ -51,6 +75,54 @@
             <arg>-parameters</arg>
           </compilerArgs>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire-plugin.version}</version>
+        <configuration>
+          <systemPropertyVariables>
+            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+            <maven.home>${maven.home}</maven.home>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${surefire-plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <systemPropertyVariables>
+                <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                <maven.home>${maven.home}</maven.home>
+              </systemPropertyVariables>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check-maven.version}</version>
+        <configuration>
+          <outputDirectory>${project.build.directory}/owasp</outputDirectory>
+          <failBuildOnCVSS>0</failBuildOnCVSS>
+          <formats>${dependency-check-maven.formats}</formats>
+          <skip>${dependency-check-maven.skip}</skip>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -107,9 +179,52 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-awt</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>1.1.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
+    <profile>
+      <id>ci</id>
+      <activation>
+        <property>
+          <name>ci</name>
+        </property>
+      </activation>
+      <properties>
+        <formatter-maven-plugin.goal>validate</formatter-maven-plugin.goal>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>ci-owasp</id>
+      <activation>
+        <property>
+          <name>ci-owasp</name>
+        </property>
+      </activation>
+      <properties>
+        <dependency-check-maven.skip>false</dependency-check-maven.skip>
+        <dependency-check-maven.formats>junit</dependency-check-maven.formats>
+        <formatter-maven-plugin.skip>true</formatter-maven-plugin.skip>
+      </properties>
+    </profile>
+
     <profile>
       <id>native</id>
       <activation>
@@ -141,6 +256,30 @@
         <quarkus.container-image.name>${project.artifactId}</quarkus.container-image.name>
         <quarkus.container-image.tag>latest</quarkus.container-image.tag>
         <quarkus.docker.dockerfile-jvm-path>src/main/container/Containerfile.temurin</quarkus.docker.dockerfile-jvm-path>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>no-format</id>
+      <activation>
+        <property>
+          <name>no-format</name>
+        </property>
+      </activation>
+      <properties>
+        <formatter-maven-plugin.skip>true</formatter-maven-plugin.skip>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>owasp</id>
+      <activation>
+        <property>
+          <name>owasp</name>
+        </property>
+      </activation>
+      <properties>
+        <dependency-check-maven.skip>false</dependency-check-maven.skip>
       </properties>
     </profile>
   </profiles>
