--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <!-- Plugin versions -->
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
     <dependency-check-maven.version>8.2.1</dependency-check-maven.version>
+    <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
     <lombok.version>1.18.28</lombok.version>
     <formatter-maven-plugin.version>2.23.0</formatter-maven-plugin.version>
     <surefire-plugin.version>3.0.0</surefire-plugin.version>
@@ -30,6 +31,7 @@
 
     <!-- Dependency versions -->
     <zxing.version>3.3.0</zxing.version>
+    <jacoco-maven-plugin.check.skip>false</jacoco-maven-plugin.check.skip>
   </properties>
 
   <build>
@@ -77,6 +79,25 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check-maven.version}</version>
+        <configuration>
+          <outputDirectory>${project.build.directory}/owasp</outputDirectory>
+          <failBuildOnCVSS>0</failBuildOnCVSS>
+          <formats>${dependency-check-maven.formats}</formats>
+          <skip>${dependency-check-maven.skip}</skip>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
@@ -99,6 +120,7 @@
               <systemPropertyVariables>
                 <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                <quarkus.test.arg-line>${argLine}</quarkus.test.arg-line>
                 <maven.home>${maven.home}</maven.home>
               </systemPropertyVariables>
             </configuration>
@@ -106,21 +128,58 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.owasp</groupId>
-        <artifactId>dependency-check-maven</artifactId>
-        <version>${dependency-check-maven.version}</version>
-        <configuration>
-          <outputDirectory>${project.build.directory}/owasp</outputDirectory>
-          <failBuildOnCVSS>0</failBuildOnCVSS>
-          <formats>${dependency-check-maven.formats}</formats>
-          <skip>${dependency-check-maven.skip}</skip>
-        </configuration>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco-maven-plugin.version}</version>
         <executions>
           <execution>
+            <id>default-prepare-agent-integration</id>
+            <goals>
+              <goal>prepare-agent-integration</goal>
+            </goals>
+            <configuration>
+              <destFile>${project.build.directory}/jacoco-quarkus.exec</destFile>
+              <append>true</append>
+            </configuration>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>
+              <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>jacoco-check</id>
             <goals>
               <goal>check</goal>
             </goals>
-            <phase>package</phase>
+            <phase>post-integration-test</phase>
+            <configuration>
+              <dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>
+              <rules>
+                <rule>
+                  <element>BUNDLE</element>
+                  <limits>
+                    <limit>
+                      <counter>LINE</counter>
+                      <value>COVEREDRATIO</value>
+                      <minimum>0.8</minimum>
+                    </limit>
+                    <limit>
+                      <counter>BRANCH</counter>
+                      <value>COVEREDRATIO</value>
+                      <minimum>0.8</minimum>
+                    </limit>
+                  </limits>
+                </rule>
+              </rules>
+              <skip>${jacoco-maven-plugin.check.skip}</skip>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -194,6 +253,11 @@
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
       <version>1.1.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jacoco</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
