--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,15 @@ jobs:
           path: '**/target/*.jar'
           retention-days: 2
 
+      - name: Upload JARs
+        uses: actions/upload-artifact@v3
+        if: ${{ always() }}
+        with:
+          if-no-files-found: error
+          name: fast-jar
+          path: '**/target/quarkus-app/**/*'
+          retention-days: 2
+
       - name: Upload Test Report
         uses: actions/upload-artifact@v3
         if: ${{ always() }}
