Add github-actions to dependabot

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ on:
       - '.all-contributorsrc'
 
 concurrency:
-  group: 'workflow = ${{ github.workflow }}, ref = ${{ github.event.ref }}, pr = ${{ github.event.pull_request.id }}'
-  cancel-in-progress: '${{ github.event_name == 'pull_request' || github.repository != 'turing85/quarkus-qr' }}'
+  group: workflow = ${{ github.workflow }}, ref = ${{ github.event.ref }}, pr = ${{ github.event.pull_request.id }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' || github.repository != 'turing85/quarkus-qr' }}
 
 permissions:
   actions: write
