Deactivate all tests in owasp scan pipeline runs

--- a/.github/actions/owasp-scan/action.yml
+++ b/.github/actions/owasp-scan/action.yml
@@ -44,6 +44,7 @@ runs:
         mvn \
           --batch-mode \
           --define ci-owasp \
+          --define skipTests \
           package
 
     - name: Upload OWASP Scan Report
