Name publish-report steps

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -186,7 +186,8 @@ jobs:
       - build-and-test-jvm
 
     steps:
-      - uses: turing85/publish-report@v1.0.7
+      - name: Publish report (JVM Test)
+        uses: turing85/publish-report@v1.0.7
         with:
           checkout: true
           download-artifact-name: test-report-jvm
@@ -203,7 +204,8 @@ jobs:
       - build-and-test-native
 
     steps:
-      - uses: turing85/publish-report@v1.0.7
+      - name: Publish Report (Native Test)
+        uses: turing85/publish-report@v1.0.7
         with:
           checkout: true
           download-artifact-name: test-report-native
