Deactivate execution of quarkus plugin on OWASP run

--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -21,7 +21,7 @@ runs:
       run: |
         mvn \
           --batch-mode \
-          --define ci-owasp \
+          --define skipFormat \
           verify \
           quarkus:go-offline \
           de.qaware.maven:go-offline-maven-plugin:resolve-dependencies \
