Introduce separate profile for ci to populate the cache

--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -21,13 +21,10 @@ runs:
       run: |
         mvn \
           --batch-mode \
-          --define skipFormat \
+          --define ci-populate-cache \
           verify \
           quarkus:go-offline \
           de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
-        mvn \
-          --define ci-owasp \
-          dependency-check:update-only
 
     - name: Cancel Build
       if: ${{ failure() }}
