--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,6 @@
 *
+!src/main/container/scripts/
+!target/lib/
+!target/quarkus-app/
 !target/*-runner
 !target/*-runner.jar
-!target/lib/*
-!target/quarkus-app/*
