--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ concurrency:
   group: workflow = ${{ github.workflow }}, ref = ${{ github.event.ref }}, pr = ${{ github.event.pull_request.id }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' || github.repository != 'turing85/quarkus-qr' }}
 
+env:
+  DOCKER_BUILDKIT: 1
+
 permissions:
   actions: write
   checks: write
@@ -77,6 +80,7 @@ jobs:
         run: |
           mvn \
             --batch-mode \
+            --define build-container-image \
             --define ci \
             verify
 
@@ -151,6 +155,7 @@ jobs:
         run: |
           mvn \
             --batch-mode \
+            --define build-container-image \
             --define ci \
             --define native \
             verify
