--- a/pom.xml
+++ b/pom.xml
@@ -277,9 +277,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.weld.se</groupId>
-      <artifactId>weld-se-shaded</artifactId>
-      <version>5.1.1.Final</version>
+      <groupId>org.jboss.weld</groupId>
+      <artifactId>weld-junit5</artifactId>
+      <version>4.0.0.Final</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
