Upgrade to GraalVM 23.0
Also: cancel workflow after reports have been uploaded and posted

--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -35,7 +35,7 @@ runs:
       if: ${{ steps.setup.outputs.cache-hit != 'true' }}
       shell: sh
       run: |
-        mvn \
+        ./mvnw \
           --batch-mode \
           --color always \
           --define ci-populate-cache \
