--- a/.github/actions/owasp-scan/action.yml
+++ b/.github/actions/owasp-scan/action.yml
@@ -54,7 +54,7 @@ runs:
     - name: OWASP CVE Scan
       shell: sh
       run: |
-        mvn \
+        ./mvnw \
           --batch-mode \
           --color always \
           --define ci-owasp \
