--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,10 +129,6 @@ jobs:
           path: '**/target/**/TEST*.xml'
           retention-days: 2
 
-      - name: Cancel Build
-        if: ${{ failure() }}
-        uses: andymckay/cancel-action@0.3
-
   build-and-test-native:
     name: Build and Test (Native)
     runs-on: ubuntu-latest
@@ -178,10 +174,6 @@ jobs:
           path: '**/target/**/TEST*.xml'
           retention-days: 2
 
-      - name: Cancel Build
-        if: ${{ failure() }}
-        uses: andymckay/cancel-action@0.3
-
   test-report-jvm:
     name: Test Report (JVM)
     runs-on: ubuntu-latest
@@ -194,6 +186,7 @@ jobs:
       - name: Publish report (JVM Test)
         uses: turing85/publish-report@v1.0.9
         with:
+          cancel-workflow-on-error: true
           checkout: true
           download-artifact-name: test-report-jvm
           report-name: JVM Test
@@ -212,6 +205,7 @@ jobs:
       - name: Publish Report (Native Test)
         uses: turing85/publish-report@v1.0.9
         with:
+          cancel-workflow-on-error: true
           checkout: true
           download-artifact-name: test-report-native
           report-name: Native Test
