Enable colored output in maven
Also, restrict AutoWeld in integration tests to @ApplicationScoped.

--- a/.github/actions/owasp-scan/action.yml
+++ b/.github/actions/owasp-scan/action.yml
@@ -43,6 +43,7 @@ runs:
       run: |
         mvn \
           --batch-mode \
+          --color always \
           --define ci-owasp \
           package
 
