--- a/.github/actions/owasp-scan/action.yml
+++ b/.github/actions/owasp-scan/action.yml
@@ -8,17 +8,30 @@ inputs:
     description: Whether artifacts (Maven state, compiled classes and JARs) should be downloaded
     default: 'true'
     required: false
+  graalvm-distribution:
+    description: The distribution of GraalVM to use
+    default: mandrel
+    required: true
+  graalvm-version:
+    description: The version of the GraalVM distribution to use
+    default: 22.3.1-Final
+    required: true
+  java-version:
+    description: The Java version to use
+    default: '17'
+    required: true
 
 runs:
   using: composite
 
   steps:
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Set up ${{ inputs.graalvm-distribution }} ${{ inputs.graalvm-version }} (Java ${{ inputs.java-version }})
+      uses: graalvm/setup-graalvm@v1
       with:
         cache: 'maven'
-        distribution: 'temurin'
-        java-version: 17
+        distribution: ${{ inputs.graalvm-distribution }}
+        java-version: ${{ inputs.java-version }}
+        version: ${{ inputs.graalvm-version }}
 
     - name: Download Maven State
       uses: actions/download-artifact@v3
@@ -63,7 +76,3 @@ runs:
         report-list-tests: failed
         report-name: OWASP Scan
         report-path: '**/target/owasp/*.xml'
-
-    - name: Cancel Build
-      if: ${{ failure() }}
-      uses: andymckay/cancel-action@0.3
