--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -3,16 +3,32 @@ name: Populate Cache
 description: |
   An action to populate the maven cache.
 
+inputs:
+  graalvm-distribution:
+    description: The distribution of GraalVM to use
+    default: mandrel
+    required: true
+  graalvm-version:
+    description: The version of the GraalVM distribution to use
+    default: 22.3.1-Final
+    required: true
+  java-version:
+    description: The Java version to use
+    default: '17'
+    required: true
+
+
 runs:
   using: composite
 
   steps:
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Set up ${{ inputs.graalvm-distribution }} ${{ inputs.graalvm-version }} (Java ${{ inputs.java-version }})
+      uses: graalvm/setup-graalvm@v1
       with:
-        cache: maven
-        distribution: temurin
-        java-version: 17
+        cache: 'maven'
+        distribution: ${{ inputs.graalvm-distribution }}
+        java-version: ${{ inputs.java-version }}
+        version: ${{ inputs.graalvm-version }}
       id: setup
 
     - name: Populate Cache
