--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ concurrency:
 
 env:
   DOCKER_BUILDKIT: 1
+  GRAALVM_DISTRIBUTION: mandrel
+  GRAALVM_VERSION: mandrel-22.3.2.1-Final
+  JAVA_VERSION: 17
+  MANDREL_VERSION: 22.3.2.1-Final
 
 permissions:
   actions: write
@@ -57,6 +61,10 @@ jobs:
 
       - name: Populate Cache
         uses: ./.github/actions/populate-cache
+        with:
+          graalvm-distribution: ${{ env.GRAALVM_DISTRIBUTION }}
+          graalvm-version: ${{ env.GRAALVM_VERSION }}
+          java-version: ${{ env.JAVA_VERSION }}
 
   build-and-test-jvm:
     name: Build and Test (JVM)
@@ -70,12 +78,13 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up ${{ env.GRAALVM_DISTRIBUTION}} ${{ env.MANDREL_VERSION }} (Java ${{ env.JAVA_VERSION }})
+        uses: graalvm/setup-graalvm@v1
         with:
           cache: 'maven'
-          distribution: 'temurin'
-          java-version: 17
+          distribution: ${{ env.GRAALVM_DISTRIBUTION}}
+          java-version: ${{ env.JAVA_VERSION }}
+          version: ${{ env.GRAALVM_VERSION }}
 
       - name: Build and Test
         run: |
@@ -143,12 +152,13 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up ${{ env.GRAALVM_DISTRIBUTION}} ${{ env.MANDREL_VERSION }} (Java ${{ env.JAVA_VERSION }})
+        uses: graalvm/setup-graalvm@v1
         with:
           cache: 'maven'
-          distribution: 'temurin'
-          java-version: 17
+          distribution: ${{ env.GRAALVM_DISTRIBUTION}}
+          java-version: ${{ env.JAVA_VERSION }}
+          version: ${{ env.GRAALVM_VERSION }}
 
       - name: Build and Test
         run: |
@@ -158,6 +168,7 @@ jobs:
             --define build-container-image \
             --define ci \
             --define native \
+            --define quarkus.docker.dockerfile-native-path=src/main/container/Containerfile.native-distroless-compressed \
             verify
 
       - name: Upload executable
@@ -232,3 +243,7 @@ jobs:
 
       - name: OWASP Scan
         uses: ./.github/actions/owasp-scan
+        with:
+          graalvm-distribution: ${{ env.GRAALVM_DISTRIBUTION }}
+          graalvm-version: ${{ env.GRAALVM_DISTRIBUTION }}-${{ env.MANDREL_VERSION }}
+          java-version: ${{ env.JAVA_VERSION }}
