--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -16,29 +16,44 @@ inputs:
     description: The Java version to use
     default: '17'
     required: true
-
+  owasp-cache-name:
+    description: The name of the owasp data cache.
+    default: owasp-cache
+    required: true
+  owasp-data-cache:
+    description: The name of the owasp data cache.
+    default: owasp-data-cache
+    required: true
 
 runs:
   using: composite
 
   steps:
     - name: Set up ${{ inputs.graalvm-distribution }} ${{ inputs.graalvm-version }} (Java ${{ inputs.java-version }})
+      id: setup
       uses: graalvm/setup-graalvm@v1
       with:
         cache: 'maven'
         distribution: ${{ inputs.graalvm-distribution }}
         java-version: ${{ inputs.java-version }}
         version: ${{ inputs.graalvm-version }}
-      id: setup
+
+    - name: OWASP cache
+      id: owasp-cache
+      uses: actions/cache@v4
+      with:
+        key: ${{ inputs.owasp-data-cache }}
+        path: ${{ github.workspace }}/${{ inputs.owasp-data-cache }}
 
     - name: Populate Cache
-      if: ${{ steps.setup.outputs.cache-hit != 'true' }}
+      if: ${{ (steps.owasp-cache.outputs.cache-hit && steps.setup.outputs.cache-hit) != 'true' }}
       shell: sh
       run: |
         ./mvnw \
           --batch-mode \
           --color always \
           --define ci-populate-cache \
+          --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
           verify \
           quarkus:go-offline \
           de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
