Add dedicated cache for OWASP scans #2

--- a/.github/actions/owasp-scan/action.yml
+++ b/.github/actions/owasp-scan/action.yml
@@ -68,7 +68,7 @@ runs:
           --batch-mode \
           --color always \
           --define ci-owasp \
-          --define dataDirectory=${{ inputs.owasp-data-cache }} \
+          --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
           package
 
     - name: Upload OWASP Scan Report
