--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -45,8 +45,8 @@ runs:
         key: ${{ inputs.owasp-data-cache }}
         path: ${{ github.workspace }}/${{ inputs.owasp-data-cache }}
 
-    - name: Populate Cache
-      if: ${{ (steps.owasp-cache.outputs.cache-hit && steps.setup.outputs.cache-hit) != 'true' }}
+    - name: Populate OWASP ata Cache
+      if: ${{ steps.owasp-cache.outputs.cache-hit != 'true' }}
       shell: sh
       run: |
         ./mvnw \
@@ -54,7 +54,17 @@ runs:
           --color always \
           --define ci-populate-cache \
           --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
-          verify \
+          dependency-check:update-only
+
+    - name: Populate Maven Cache
+      if: ${{ steps.setup.outputs.cache-hit != 'true' }}
+      shell: sh
+      run: |
+        ./mvnw \
+          --batch-mode \
+          --color always \
+          --define ci-populate-cache \
+          --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
           quarkus:go-offline \
           de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
 
